samples/_failures_safe/1761158613_e97c2c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5210fcae.c: In function ‘get_user_event’:
./samples/SAFE/__tmp_5210fcae.c:167:5: error: expected expression at end of input
  167 |     if (
      |     ^~
./samples/SAFE/__tmp_5210fcae.c:167:5: error: expected declaration or statement at end of input
